--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>Hi There</h1>
+<p>Welcome To the Developer area</p>
 
 </body>
 </html>
